--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <packaging>pom</packaging>
   <properties>
       <teamcity-version>8.1.1</teamcity-version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
   <repositories>
     <repository>
@@ -15,6 +17,13 @@
     </repository>
   </repositories>
   <build>
+      <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>2.6</version>
+        </plugin>
+      </plugins>
       <pluginManagement>
           <plugins>
               <plugin>
@@ -31,7 +40,7 @@
   <modules>
     <module>accurev-server</module>
     <module>accurev-agent</module>
-    <module>accurev-common</module>    
+    <module>accurev-common</module>
     <module>build</module>
   </modules>
 </project>
